bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: illegal start of simple pattern
while(fin==false)
^